src/objects/QIPP_CoPQ_Project_Team__c.object
<CustomObject>
    <fields>
        <fullName>BL_Transformation_Lead_Email__c</fullName>
        <label>BL Transformation Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BL_Transformation_Lead__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BL Transformation Lead</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Project Contact Name</relationshipLabel>
        <relationshipName>ProjectContactName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Delegate_Email__c</fullName>
        <label>Business Owner – Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Delegate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If there is no delegate available, assign Business Owner as delegate.</inlineHelpText>
        <label>Business Owner Delegate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <value>Business Owner Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <value>Business Owner Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <value>Business Owner Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_4__c</field>
                <operation>equals</operation>
                <value>Business Owner Delegate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Business Owner Delegate</relationshipLabel>
        <relationshipName>BusinessOwnerDelegate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Email__c</fullName>
        <label>Business Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_4__c</field>
                <operation>equals</operation>
                <value>Business Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>CoPQ Project Team (Business Owner)</relationshipLabel>
        <relationshipName>Business_Owner_cr</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Role_Function__c</fullName>
        <label>Business Role / Function</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q PMO Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CoPQTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoPQ Team Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Role_Function__c</valueField>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Role_Function__c</valueField>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Role_Function__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>CoPQ Project Team</relationshipLabel>
        <relationshipName>CoPQ_Project_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Approver_Delegate_Email__c</fullName>
        <label>Finance Approver Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Approver_Delegate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If there is no delegate available, assign Finance Approver as delegate.</inlineHelpText>
        <label>Finance Approver Delegate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <value>Finance Approver Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <value>Finance Approver Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <value>Finance Approver Delegate</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_4__c</field>
                <operation>equals</operation>
                <value>Finance Approver Delegate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>CoPQ Project Team (Finance Approver Delegate)</relationshipLabel>
        <relationshipName>FinanceApproverDelegate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Approver_Email__c</fullName>
        <label>Finance Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Finance Approver</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <value>Finance Approver</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <value>Finance Approver</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <value>Finance Approver</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_4__c</field>
                <operation>equals</operation>
                <value>Finance Approver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>CoPQ Project Team (Finance Approver)</relationshipLabel>
        <relationshipName>CoPQ_Project_Team1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Measure_Creator_Email__c</fullName>
        <label>Measure Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Measure_Creator__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Measure Creator</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Measure Creator</relationshipLabel>
        <relationshipName>MeasureCreator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <label>Project ID</label>
        <referenceTo>QIPP_Project__c</referenceTo>
        <relationshipLabel>CoPQ Project Team</relationshipLabel>
        <relationshipName>QIPPProjectTeams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <formula>ProjectID__r.Project_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>ProjectID__r.Project_Name_Succinct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_PMO_Team_Member_Email__c</fullName>
        <label>Q PMO Team Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q_PMO_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Q PMO Team Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_1__c</field>
                <operation>equals</operation>
                <value>Q PMO Team Member</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_2__c</field>
                <operation>equals</operation>
                <value>Q PMO Team Member</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_3__c</field>
                <operation>equals</operation>
                <value>Q PMO Team Member</value>
            </filterItems>
            <filterItems>
                <field>QIPP_Contacts__c.CoPQ_Role_4__c</field>
                <operation>equals</operation>
                <value>Q PMO Team Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Q PMO Team Member</relationshipLabel>
        <relationshipName>QPMOTeamMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CoPQ Project Team</label>
    <nameField>
        <displayFormat>Team-{0000}</displayFormat>
        <label>QIPP Project  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CoPQ Project Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>